# LArReco

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  Makefile  README.md
detectors/: dune10kt.xml  protodune.xml  uboone.xml
geometry/: Geometry_MicroBooNE.xml  Geometry_MicroBooNE_MCC7Gaps.xml  PandoraGeometry_DUNE35t.xml  PandoraGeometry_DUNEFD.xml  PandoraGeometry_DUNEFD_1x2x6.xml  PandoraGeometry_DUNEFD_VD_1x8x14.xml  PandoraGeometry_DUNEFD_VD_1x8x6.xml  PandoraGeometry_ICARUS.xml  PandoraGeometry_MicroBooNE.xml  PandoraGeometry_MicroBooNE_MCC7Gaps.xml  PandoraGeometry_ProtoDUNE.xml  PandoraGeometry_ProtoDUNE_DP.xml  PandoraGeometry_SBND.xml  Pandora_Geometry_MCC9.0-v13.xml  dune10kt_global.xml  dune10kt_volume1.xml  dune10kt_volume2.xml  dune10kt_volume3.xml  protodune_volume1.xml  protodune_volume2.xml  protodune_volume3.xml  uboone.xml  uboone_mcc7_era.xml
geometry_old/: dune10kt_volume0.xml  dune10kt_volume4.xml  dune10kt_volume5.xml  protodune_global.xml  protodune_volume0.xml
include/: DUNE35tPseudoLayerPlugin.h  DUNE35tTransformationPlugin.h  DUNE4APAPseudoLayerPlugin.h  DUNE4APATransformationPlugin.h  LArDriftVolume.h  LArPandoraPseudoLayerPlugin.h  LArPandoraTransformationPlugin.h  LBNE35tPseudoLayerPlugin.h  LBNE35tTransformationPlugin.h  LBNE4APAPseudoLayerPlugin.h  LBNE4APATransformationPlugin.h  MicroBooNELegacyTransformationPlugin.h  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationPlugin.h  MyTrackShowerIdAlgorithm.h  PandoraInterface.h  ParticleHierarchyValidationAlgorithm.h  ProtoDUNEPseudoLayerPlugin.h  ProtoDUNETransformationPlugin.h
lib/: libLArReco.so.03.16.00
python/: event_view.py  quick_parse.py  template.csv
scripts/: PandoraSettings3D.xml  PandoraSettingsCheatMicroBooNE.xml  PandoraSettingsLBNE.xml  PandoraSettingsLBNE_3DTest.xml  PandoraSettingsMicroBooNE.xml  PandoraSettingsMicroBooNE_CosmicRays.xml  PandoraSettingsTest.xml  PandoraSettingsWrite.xml  PandoraSettings_LBNE35t_Cosmic.xml  PandoraSettings_MicroBooNE_Cheat.xml  PandoraSettings_MicroBooNE_Cosmic.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_MicroBooNE_SingleNeutrino.xml  PandoraSettings_MicroBooNE_Standard.xml  PandoraSettings_Write.xml  Test.xml  test.cc  test.xml
scripts/development/: PandoraSettings_Cheat.xml  PandoraSettings_Write.xml
scripts/dune/: PandoraSettings_2Drift_Stitching.xml  PandoraSettings_DUNE_Cosmic.xml  PandoraSettings_DUNE_Neutrino.xml  PandoraSettings_DUNE_Stitching.xml  xmlForEachDriftVolume.sh
scripts/dune35t/: PandoraSettings_DUNE35t_Cosmic.xml  PandoraSettings_DUNE35t_Cosmic_long.xml  PandoraSettings_DUNE35t_Cosmic_short.xml
scripts/dune4apa/: PandoraSettings_DUNE4APA_SingleNeutrino.xml  PandoraSettings_DUNE4APA_SingleNeutrino_left.xml  PandoraSettings_DUNE4APA_SingleNeutrino_right.xml
scripts/protodune/: PandoraSettings_ProtoDUNE_SingleNeutrino.xml  PandoraSettings_ProtoDUNE_SingleNeutrino_left.xml  PandoraSettings_ProtoDUNE_SingleNeutrino_right.xml
scripts/uboone/: PandoraSettings_MicroBooNE.xml  PandoraSettings_MicroBooNE_Cosmic.xml  PandoraSettings_MicroBooNE_Neutrino.xml  PandoraSettings_MicroBooNE_Validation.xml
settings/: PandoraSettings_BScProjectInputs.xml  PandoraSettings_Cosmic_DUNEFD.xml  PandoraSettings_Cosmic_DUNEFD_VD.xml  PandoraSettings_Cosmic_ProtoDUNE.xml  PandoraSettings_Cosmic_ProtoDUNE_DP.xml  PandoraSettings_Cosmic_SBND.xml  PandoraSettings_Cosmic_Standard.xml  PandoraSettings_EDepReco.xml  PandoraSettings_EDepReco_Nu.xml  PandoraSettings_Inference_DUNEFD_DeepLearningId.xml  PandoraSettings_Master_Atmos_DUNEFD.xml  PandoraSettings_Master_DUNEFD.xml  PandoraSettings_Master_DUNEFD_HD_LowE.xml  PandoraSettings_Master_DUNEFD_VD.xml  PandoraSettings_Master_DUNEFD_VD_LowE.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_128.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_128_v2.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_128_v3.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_128_v4.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_2DWork.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_64.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_cheatmerge.xml  PandoraSettings_Master_DUNEFD_VD_LowE_DL_v5.xml  PandoraSettings_Master_DUNEFD_VD_LowE_Mva.xml  PandoraSettings_Master_DUNEFD_VD_LowE_Mva_iterate.xml  PandoraSettings_Master_DUNEFD_VD_LowE_clustermerge.xml  PandoraSettings_Master_DUNEFD_VD_cheatpfo.xml  PandoraSettings_Master_DUNEFD_VD_cheatvertex.xml  PandoraSettings_Master_DUNEFD_VD_config.xml  PandoraSettings_Master_DUNEFD_VD_std.xml  PandoraSettings_Master_DUNEFD_VD_view.xml  PandoraSettings_Master_ICARUS.xml  PandoraSettings_Master_LowE_DUNEFD.xml  PandoraSettings_Master_LowE_DUNEFD_VD.xml  PandoraSettings_Master_MicroBooNE.xml  PandoraSettings_Master_ProtoDUNE.xml  PandoraSettings_Master_ProtoDUNE_DP.xml  PandoraSettings_Master_SBND.xml  PandoraSettings_Master_Standard.xml  (+44 more)
src/: BScProjectInputsAlgorithm.cxx  BScProjectInputsAlgorithm.h  DUNE35tPseudoLayerPlugin.cxx  DUNE35tTransformationPlugin.cxx  DUNE4APAPseudoLayerPlugin.cxx  DUNE4APATransformationPlugin.cxx  LArPandoraPseudoLayerPlugin.cxx  LArPandoraTransformationPlugin.cxx  LBNE35tPseudoLayerPlugin.cxx  LBNE35tTransformationPlugin.cxx  LBNE4APAPseudoLayerPlugin.cxx  LBNE4APATransformationPlugin.cxx  MicroBooNELegacyTransformationPlugin.cxx  MicroBooNEPseudoLayerCalculator.cxx  MicroBooNEPseudoLayerCalculator.h  MicroBooNEPseudoLayerPlugin.cxx  MicroBooNEPseudoLayerPlugin.h  MicroBooNETransformationCalculator.cxx  MicroBooNETransformationCalculator.h  MicroBooNETransformationPlugin.cxx  MicroBooNETransformationPlugin.h  MyTrackShowerIdAlgorithm.cxx  ParticleHierarchyValidationAlgorithm.cxx  ProtoDUNEPseudoLayerPlugin.cxx  ProtoDUNETransformationPlugin.cxx
test/: PandoraInterface.cxx
validation/: DUNEValidation.C  MakePerformancePlots.cc  NewValidation.C  NewValidation.h  Validation.C  Validation.h  ValidationIO.h  metrics_plots.ipynb  metrics_plots_compare.ipynb
volumes/: dune10kt.xml  dune10kt_global.xml  protodune.xml  protodune_global.xml  uboone.xml
(+48 files in other folders)
